--- a/index.html
+++ b/index.html
@@ -302,44 +302,54 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Customer Reviews</h2>
+                    <h3 class="section-subheading text-muted">We're proud of our 5-star reviews on Yelp, and we are always striving to create an amazing customer 
+                        experience.  If you've been to our shop before and had a great experience, we would really appreciate a quick review.
+                        Check out some of our great reviews below:
+                    </h3>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="" />
-                            <h4>Kay Garland</h4>
-                            <p class="text-muted">Lead Designer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
+
+                <div class="row yelp-review">
+                    <div class="col-lg-6 text-center">
+                    <span class="yelp-review" data-review-id="HmAYWvIKuh3uOrfac22Auw" data-hostname="www.yelp.com">Read 
+                        <a href="https://www.yelp.com/user_details?userid=KTsxB5l1W7lsRVabk65WbA" rel="nofollow noopener">Cynthia T.</a>'s 
+                        <a href="https://www.yelp.com/biz/smutny-and-ross-transmission-and-auto-specialists-palmetto-bay?hrid=HmAYWvIKuh3uOrfac22Auw" rel="nofollow noopener">review</a> 
+                        of <a href="https://www.yelp.com/biz/TJBgSrmgLGwxyR5nX-BanA" rel="nofollow noopener">Smutny & Ross Transmission & Auto Specialists</a> on 
+                        <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a>
+                        <script async="async" src="https://www.yelp.com/embed/widgets.js" type="text/javascript"></script>
+                    </span>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="" />
-                            <h4>Larry Parker</h4>
-                            <p class="text-muted">Lead Marketer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
+
+                    <div class="col-lg-6 text-center">
+                        <span class="yelp-review" data-review-id="8nRBUqump69RV7nHIg7BqA" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=MzNVtMrYutasaoi2YaX5Lw" rel="nofollow noopener">Lauren K.</a>'s <a href="https://www.yelp.com/biz/smutny-and-ross-transmission-and-auto-specialists-palmetto-bay?hrid=8nRBUqump69RV7nHIg7BqA" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/TJBgSrmgLGwxyR5nX-BanA" rel="nofollow noopener">Smutny & Ross Transmission & Auto Specialists</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a><script async="async" src="https://www.yelp.com/embed/widgets.js" type="text/javascript"></script></span>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="" />
-                            <h4>Diana Petersen</h4>
-                            <p class="text-muted">Lead Developer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
+                
+                </div>
+
+                <div class="row yelp-review">
+                    <div class="col-lg-6 text-center">
+
+                        <span class="yelp-review" data-review-id="-bxwiVFASYahwrkJ_cweEw" data-hostname="www.yelp.com">Read 
+                            <a href="https://www.yelp.com/user_details?userid=zrmOdJV7m6om07WhF0FBig" rel="nofollow noopener">Alex F.</a>'s 
+                            <a href="https://www.yelp.com/biz/smutny-and-ross-transmission-and-auto-specialists-palmetto-bay?hrid=-bxwiVFASYahwrkJ_cweEw" rel="nofollow noopener">review</a> 
+                            of <a href="https://www.yelp.com/biz/TJBgSrmgLGwxyR5nX-BanA" rel="nofollow noopener">Smutny & Ross Transmission & Auto Specialists</a> on 
+                            <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a>
+                            <script async="async" src="https://www.yelp.com/embed/widgets.js" type="text/javascript"></script>
+                        </span>
+                    </div>
+
+                    <div class="col-lg-6 text-center">
+                        <span class="yelp-review" data-review-id="psuDHqjV_RI2fjl0TYHp-w" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=7lptQiT5WvomvMrelZBMvw" rel="nofollow noopener">Bianca V.</a>'s <a href="https://www.yelp.com/biz/smutny-and-ross-transmission-and-auto-specialists-palmetto-bay?hrid=psuDHqjV_RI2fjl0TYHp-w" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/TJBgSrmgLGwxyR5nX-BanA" rel="nofollow noopener">Smutny & Ross Transmission & Auto Specialists</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a><script async="async" src="https://www.yelp.com/embed/widgets.js" type="text/javascript"></script></span>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
-                </div>
+
+                <br>
+                
+                <h3 class="section-subheading text-muted text-center">
+                    You can also find us on <a class="nextdoor-link" href="https://nextdoor.com/pages/smutny-ross-auto-repair?init_source=copy_link_share">Nextdoor.com</a> where we are proudly
+                    serving our local customers of Cutler Bay and Palmetto Bay.
+                </h3>
+
             </div>
         </section>
 
