--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger mobile-nav" href="#services">Services</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger mobile-nav" href="#location">Locate Us</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger mobile-nav" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger mobile-nav" href="#team">Team</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger mobile-nav" href="#reviews">Reviews</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger mobile-nav" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -298,8 +298,8 @@
                 
             </div>
         </section>
-        <!-- Team-->
-        <section class="page-section bg-light" id="team">
+        <!-- Reviews-->
+        <section class="page-section bg-light" id="reviews">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Customer Reviews</h2>
