--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="row text-center">
                    <div class="col-md-5">
                        <h4 class="section-subheading">Need automotive repairs or servicing?</h4>
-                       <p>Bring your vehicle by and we can take a look, located at <strong>9970 Banyan St</strong>, we're open weekdays from 8am to 5pm. Or call us at <strong>305-253-0187</strong> and we can give you 
+                       <p>Bring your vehicle by and we can take a look, located at <strong>9970 Banyan St</strong>, we're open weekdays from 8am to 5pm. Or call us at <strong>305-253-0187 / 305-234-9477</strong> and we can give you 
                            an estimate over the phone</p>
                         <hr>
                         <br>
@@ -238,7 +238,7 @@
                     <h2 class="section-heading text-uppercase">Where It All Started</h2>
                     
                 </div>
-                <p class="text-body">We are a second-generation family owned auto repair shop with 40 years of experience.  Founded in 1976 by Stephen Smutny and BOB? Ross as a small
+                <p class="text-body">We are a second-generation family owned auto repair shop with 40 years of experience.  Founded in 1976 by Stephen Smutny and Bob Ross as a small
                     transmission and body shop, we have since grown into one of the most well known auto repair shops in Palmetto Bay.  This tradition of excellence and 
                     honesty is carried on by the second-generation Smutnys, Steve and Bill.  <br><br>
                     We work hard to give our customers the best experience possible.  
@@ -314,7 +314,7 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Us</h2>
                     <hr>
-                    <h2 class="section-subheading text-strong">305-253-0187</h3>
+                    <h2 class="section-subheading text-strong">305-253-0187 / 305-234-9477</h3>
                     <p>Give us a call today for any questions, a quick estimate, or a time to bring in your vehicle</p>
                     <p>Thank you for your buisness, and we hope to see you soon</p>
                 </div>
