--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
                 <div class="row text-center">
                    <div class="col-md-5">
                        <h4 class="section-subheading">Need automotive repairs or servicing?</h4>
-                       <p>Bring your vehicle by and we can take a look, located at <strong>9970 Banyan St</strong>, we're open weekdays from 8am to 5pm. Or call us at <strong>305-253-0187 / 305-234-9477</strong> and we can give you 
-                           an estimate over the phone</p>
+                       <p>Bring your vehicle by and we can take a look, located at <strong>9970 Banyan St, Miami, FL, 33157</strong>, we're open weekdays from 8am to 5pm. Or call us today at <strong>305-253-0187 / 305-234-9477</strong></p>
                         <hr>
                         <br>
                         <p>We are a local family-owned NAPA AutoCare Center and we have been serving our local South Florida customers for over 40 years.  Our ASE
